--- a/_includes/4-trails.html
+++ b/_includes/4-trails.html
@@ -1,48 +1,15 @@
 <section class="animated">
   <div id="content" class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Explore the Trails</h2>
-      </div>
-      <div class="col-lg-3 text-center"></div>
-      <div class="col-lg-6 text-center">
-        <input type="text" class="form-control" placeholder="Search by Trail Name or CIty">
-      </div>
-    </div>
-    <div class="col-lg-3 text-center"></div>
-    <div class="col-lg-12 text-center">
-      <hr class="primary">
-      <br />
-    </div>
-  </div>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-4 col-md-4 text-center">
-        <div class="service-box">
-          <img src="/img/portfolio/1.jpg" class="img-responsive" alt="Responsive image">
-          <h3>Bikeways</h3>
-          <p class="text-muted">Our templates are updated regularly so they don't break.</p>
-          <a class="btn btn-outline btn-xl btn-inverse">View the Trails</a>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5 col-md-5">
+          <div class="service-box">
+            <h3 class="section-heading">{{page.title}}</h3>
+            <p class="text-muted">{{page.subtitle}}</p>
+          </div>
         </div>
-      </div>
-      <div class="col-lg-4 col-md-4 text-center">
-        <div class="service-box">
-          <img src="/img/portfolio/1.jpg" class="img-responsive" alt="Responsive image">
-          <h3>Hiking Trails</h3>
-          <p class="text-muted">You can use this theme as is, or you can make changes!</p>
-          <a class="btn btn-outline btn-xl btn-inverse">View the Trails</a>
-
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-4 text-center">
-        <div class="service-box">
-          <img src="/img/portfolio/1.jpg" class="img-responsive" alt="Responsive image">
-          <!--i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i-->
-          <h3>Mountain Bike Trails</h3>
-          <p class="text-muted">We update dependencies to keep things fresh.</p>
-          <a class="btn btn-outline btn-xl btn-inverse">View the Trails</a>
-
+        <div class="col-lg-7 col-md-7">
+          <div id="trailmap"></div>
         </div>
       </div>
     </div>
