--- a/_includes/1-head.html
+++ b/_includes/1-head.html
@@ -28,7 +28,7 @@
 
     {% if site.addthis_id %}
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
-    <script type="text/javascript" src="{{site.baseurl}}//s7.addthis.com/js/300/addthis_widget.js#pubid={{ site.addthis_id }}"></script>
+    <script type="text/javascript" src="{{site.baseurl}}/s7.addthis.com/js/300/addthis_widget.js#pubid={{ site.addthis_id }}"></script>
     {% endif %}
 
     {% if site.google_analytics %}
