--- a/_includes/5-gallery.html
+++ b/_includes/5-gallery.html
@@ -26,7 +26,7 @@
                 {{img.caption}}
               </div>
               <br />
-              <a class="btn btn-outline btn-sm-img" href="{{site.baseurl}}/{{img.name | slugify}}/">View the Trail</a>
+              <a class="btn btn-outline btn-sm-img" href="{{site.baseurl}}/trails/{{img.name | slugify}}/">View the Trail</a>
             </div>
           </div>
         </div>
