--- a/_includes/4-trails.html
+++ b/_includes/4-trails.html
@@ -1,5 +1,5 @@
-<section class="animated">
-  <div id="content" class="container">
+<section id="content" class="animated">
+  <div class="container">
     <div class="container">
       <div class="row">
         <div class="col-lg-5 col-md-5">
