--- a/_includes/9-overview-map.html
+++ b/_includes/9-overview-map.html
@@ -3,55 +3,77 @@ if (L.Browser.mobile) {
   var drag = false;
 }else{var drag = true}
 
+var map,
+  tangramLayer,
+  x = false,
+  key = L.Mapzen.apiKey = "mapzen-btYeCLJ",
+  labels = L.Mapzen.BasemapStyles.Walkabout,
+  nolabels = L.Mapzen.BasemapStyles.WalkaboutNoLabels;
+
 function buildMap() {
-  var map = new L.Map('map', {
+  map = new L.Mapzen.map('map', {
     dragging: drag,
     scrollWheelZoom: false,
-    zoomControl: false
+    zoomControl: false,
+    tangramOptions: {
+      scene: nolabels
+    }
   });
-  var latlng = [39,-83];
+  /*why did I have to look through source code to find this??*/
+  map.on('tangramloaded', function(e) {
+    tangramLayer = e.tangramLayer;
+  });
+  var latlng = [39.098,-83.047];
   map.setView(latlng, 9);
-  //OpenMapTiles basemaps served from the OVRDC Vector Tile Server on a Digital Ocean Droplet using mbtiles-server OST updated 1/25/2017
-  var omtAttribution = "<a href=\"http://www.ovrdc.org/gis\" target=\"_blank\"><i class='fa fa-creative-commons ' aria-hidden='true'></i>&nbsp;OVRDC</a>&nbsp;<a href=\"http://openmaptiles.org/\" target=\"_blank\"><i class='fa fa-copyright' aria-hidden='true'></i>&nbsp;OpenMapTiles</a>&nbsp;<a href=\"http://www.openstreetmap.org/about/\" target=\"_blank\"><i class='fa fa-copyright' aria-hidden='true'></i>&nbsp;OpenStreetMap</a>";
-
-  L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png', {
-    maxZoom: 18,
-    attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>, &copy;<a href="https://carto.com/attribution">CARTO</a>'
-  }).addTo(map);
+  var geocoder = L.Mapzen.geocoder(key);
+  /*geocoder.addTo(map);*/
   var newZoom = L.control.zoom();
   var explore = document.getElementById('explore');
-  explore.addEventListener('click', function() {
-    map.toggleFullscreen() // Either go fullscreen, or cancel the existing fullscreen.
-    newZoom.addTo(map);
-    if (map.hasLayer(roadTrails)) {
-      map.removeLayer(roadTrails);
-      setTimeout(function() {
-        map.addLayer(roadTrails)
-      }, 200);
-    }
-    map.scrollWheelZoom.enable();
-    map.dragging.enable();
-  });
-  map.on('fullscreenchange', function () {
-    if (!map.isFullscreen()) {
-      map.remove();
-      setTimeout(function() {
-        buildMap()
-      }, 100);
-    }
-  });
+
   var roadTrails = new L.geoJson(null, {
-    color: '#7fbf7b',
-    //dashArray: "5,5",
+    color: '#3c763d',
     weight: 4,
-    opacity: 0.8,
-    //clickable: false,
+    opacity: 1,
   }).addTo(map);
   omnivore.geojson('https://www.ovrdc.org/apps/assets/data/bikeways/OVRDC_Bikeways.geojson', null, roadTrails);
 
   omnivore.geojson('https://www.ovrdc.org/apps/assets/data/bikeways/Gravel_Grinding_101_ridewithgps.geojson', null, roadTrails);
 
   omnivore.geojson('https://www.ovrdc.org/apps/assets/data/bikeways/Ridgetop_Ramble_ridewithgps.geojson', null, roadTrails);
+
+
+  explore.addEventListener('click', function() {
+    if (!map.isFullscreen()) {
+      map.toggleFullscreen();
+      x = true;
+      if(tangramLayer) {
+        tangramLayer.scene.load(labels);
+      }
+      newZoom.addTo(map);
+      geocoder.addTo(map);
+      if (map.hasLayer(roadTrails)) {
+        map.removeLayer(roadTrails);
+        setTimeout(function() {
+          map.addLayer(roadTrails)
+        }, 200);
+      }
+      map.scrollWheelZoom.enable();
+      map.dragging.enable();
+    }
+  });
+  map.on('fullscreenchange', function () {
+    if (!map.isFullscreen() && x == true) {
+      map.invalidateSize();
+      map.removeControl(newZoom);
+      map.removeControl(geocoder);
+      tangramLayer.scene.load(nolabels);
+      map.scrollWheelZoom.disable();
+      map.dragging.disable();
+      x = false;
+    }
+  });
 }
-buildMap();
+window.onload = function() {
+  buildMap();
+}
 </script>
