--- a/css/main.scss
+++ b/css/main.scss
@@ -71,6 +71,7 @@ $theme-dark: #222;
   padding: 4px 10px!important;
   margin-top: 10px!important;
   font-size: 11px;
+  color: #222;
 }
 .btn-sm-img {
   font-size: 11px;
