--- a/_includes/4-trails-list.html
+++ b/_includes/4-trails-list.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-lg-12">
           {% for trail in site.trails %}{% if page.type == trail.type %}
-          <h3 class="section-heading"><a href="{{site.baseurl}}/trails/{{trail.url}}">{{trail.title}}</a></h3>
+          <h3 class="section-heading"><a href="..{{trail.url}}">{{trail.title}}</a></h3>
           {%endif%}{%endfor%}
           </ul>
         </div>
