--- a/_includes/4-trails.html
+++ b/_includes/4-trails.html
@@ -6,6 +6,16 @@
           <div class="service-box">
             <h3 class="section-heading">{{page.title}}</h3>
             <p class="text-muted">{{page.subtitle}}</p>
+            <p>Length: </p>
+            <p>Surface: </p>
+            <p>Website: </p>
+            <p>Upcoming Events: </p>
+            <p>GPX File: </p>
+            <p>Directions: <p>
+            <p>Counties: </p>
+            <p>Bike Store Nearby: </p>
+            <a href="#" class="btn btn-outline btn-sm-nav">Trail Website</a>
+            <a href="#" class="btn btn-outline btn-sm-nav">Social Media Page</a>
           </div>
         </div>
         <div class="col-lg-7 col-md-7">
