--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,8 @@ layout: compress
 <body id="page-top">
   {% include 2-nav.html %}
   {% include 3-header.html %}
-  {% if page.layout == 'default'%}{% include 4-trails-overview.html %}{%elsif page.layout == 'page'%}{%include 4-trails-list.html%}{%else%}{%include 4-trails.html%}{%endif%}
+  {% if page.layout == 'default'%}{% include 4-trails-overview.html %}{%elsif page.layout == 'page'%}{%include 4-trails-list.html%}{%endif%}
+  {% if page.layers %}{%include 4-trails.html%}{%endif%}
   {% include 5-gallery.html %}
   {% include 6-overview-map.html %}
   {% include 7-footer.html %}
