--- a/_includes/9-overview-map.html
+++ b/_includes/9-overview-map.html
@@ -12,9 +12,7 @@ function buildMap() {
   map = new L.Mapzen.map('map', {
     dragging: drag,
     scrollWheelZoom: false,
-    zoomControl: false,
-    tangramOptions: {
-      scene:L.Mapzen.BasemapStyles.WalkaboutNoLabels    }
+    zoomControl: false
   });
   /*why did I have to look through source code to find this??*/
   map.on('tangramloaded', function(e) {
