--- a/_includes/4-trails-overview.html
+++ b/_includes/4-trails-overview.html
@@ -23,7 +23,7 @@
           <img src="{{site.baseurl}}/img/homepage-images/medium/bikepath.jpg" class="img-responsive" alt="Responsive image">
           <h3>Bikeways</h3>
           <p class="text-muted">Our templates are updated regularly so they don't break.</p>
-          <a class="btn btn-outline btn-xl btn-inverse" href="/bikeways/">View the Trails</a>
+          <a class="btn btn-outline btn-xl btn-inverse" href="bikeways/">View the Trails</a>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 text-center">
@@ -31,7 +31,7 @@
           <img src="{{site.baseurl}}/img/homepage-images/medium/hiking.jpg" class="img-responsive" alt="Responsive image">
           <h3>Hiking & Bridle Trails</h3>
           <p class="text-muted">You can use this theme as is, or you can make changes!</p>
-          <a class="btn btn-outline btn-xl btn-inverse" href="/hiking-bridle/">View the Trails</a>
+          <a class="btn btn-outline btn-xl btn-inverse" href="hiking-bridle/">View the Trails</a>
 
         </div>
       </div>
@@ -41,7 +41,7 @@
           <!--i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i-->
           <h3>Mountain Bike Trails</h3>
           <p class="text-muted">We update dependencies to keep things fresh.</p>
-          <a class="btn btn-outline btn-xl btn-inverse" href="/mountain-biking/">View the Trails</a>
+          <a class="btn btn-outline btn-xl btn-inverse" href="mountain-biking/">View the Trails</a>
 
         </div>
       </div>
