--- a/_includes/2-nav.html
+++ b/_includes/2-nav.html
@@ -15,7 +15,7 @@
                   <a class="page-scroll" href="{{site.baseurl}}/bikeways">Bikeways</a>
               </li>
                 <li>
-                    <a class="page-scroll" href="{{site.baseurl}}/hiking-trails">Hkinging & Bridle</a>
+                    <a class="page-scroll" href="{{site.baseurl}}/hiking-bridle">Hkinging & Bridle</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="{{site.baseurl}}/mountain-biking">Mountain Biking</a>
