--- a/css/main.scss
+++ b/css/main.scss
@@ -114,3 +114,11 @@ footer {
   background-color: transparent;
   color: #333;
 }
+.section-heading.trail-list {
+  margin-top: 0;
+}
+@media (max-width:768px) {
+  .img-thumbnail.trail-list {
+    display: none;
+  }
+}
