--- a/_includes/4-trails-list.html
+++ b/_includes/4-trails-list.html
@@ -14,6 +14,7 @@
             <p>{{trail.subtitle}}<br>
             <span class="text-muted">Length: {{trail.length}} miles<br>
             Surface: {{trail.surface}}<br>
+              Difficulty:<br>
             Directions: <br>
             Counties: for loop<br><span></p>
           </blockquote>
