--- a/_includes/4-trails-list.html
+++ b/_includes/4-trails-list.html
@@ -1,12 +1,14 @@
 <section id="content" class="animated">
   <div class="container">
+    <div class="row">
+      <div class="col-lg-10 col-md-10 col-sm-12">
       {% assign sorted_trails = site.trails | sort:"title" %}
       {% for trail in sorted_trails %}{% if page.type == trail.type %}
       <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-3">
           <img src="{{site.baseurl}}/img/trail-images/small/{{trail.img}}" class="img-thumbnail trail-list" alt="Responsive image">
         </div>
-        <div class="col-lg-9 col-md-9 col-sm-9">
+        <div class="col-lg-7 col-md-7 col-sm-9">
           <blockquote>
             <h3 class="section-heading trail-list">
               <a href="..{{trail.url}}">{{trail.title}}</a>
@@ -21,5 +23,8 @@
         </div>
       </div>
       {%endif%}{%endfor%}
+      </div>
+        <div class="col-lg-2 col-md-2 col-sm-0">Trail list placeholder.</div>
+    </div>
   </div>
 </section>
