--- a/_includes/4-trails-list.html
+++ b/_includes/4-trails-list.html
@@ -24,7 +24,9 @@
       </div>
       {%endif%}{%endfor%}
       </div>
-        <div class="col-lg-2 col-md-2 col-sm-0">Trail list placeholder.</div>
+        <div id="trail-list" class="col-lg-2 col-md-2 col-sm-0">
+          <ul style="list-style:none;">{% assign sorted_trails = site.trails | sort:"title" %}
+      {% for trail in sorted_trails %}{% if page.type == trail.type %}<li>{{trail.title}}{%endif%}{%endfor%}</div>
     </div>
   </div>
 </section>
