--- a/_includes/4-trails-list.html
+++ b/_includes/4-trails-list.html
@@ -24,7 +24,7 @@
       </div>
       {%endif%}{%endfor%}
       </div>
-        <div id="trail-list" class="col-lg-3 col-md-3 col-sm-12">
+        <div id="trail-list" class="col-lg-3 col-md-3 col-sm-12" style="border-left:solid thin lightgray;">
           <ul style="list-style:none;">
             {% for trail in sorted_trails %}{% if page.type == trail.type %}<li>{{trail.title}}</li>{%endif%}{%endfor%}</div>
     </div>
