--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@ layout: compress
   {% include 7-footer.html %}
   {% include 8-scripts.html %}
   {% include 9-overview-map.html%}
-  {% if page.layout == 'trails' %}{% include 10-trail-map.html %}{% endif %}
+  {% if page.layout == 'trails' %}{% include 10-trails-detailed-map.html %}{% endif %}
   {{content}}
 </body>
 
