--- a/_includes/4-trails-detailed.html
+++ b/_includes/4-trails-detailed.html
@@ -6,16 +6,12 @@
           <div class="service-box">
             <h3 class="section-heading">{{page.title}}</h3>
             <p class="text-muted">{{page.subtitle}}</p>
-            <p>Length: </p>
-            <p>Surface: </p>
-            <p>Website: </p>
-            <p>Upcoming Events: </p>
-            <p>GPX File: </p>
-            <p>Directions: <p>
-            <p>Counties: </p>
-            <p>Bike Store Nearby: </p>
-            <a href="#" class="btn btn-outline btn-sm-nav">Trail Website</a>&nbsp;
-            <a href="#" class="btn btn-outline btn-sm-nav">Social Media Page</a>
+            <p>Length: {{page.length}}</p>
+            <p>Surface: {{page.surface}}</p>
+            <p>Counties: {% for county in page.counties | %}{{county}}{% unless forloop.last %},&nbsp;{% endunless %}{% endfor%}</p>
+            <a href="{{page.link}}" class="btn btn-outline btn-sm-nav"><i class="fa fa-external-link">&nbsp;</i>Trail Website</a>
+            <span>&nbsp;</span>
+            <a href="{{site.baseurl}}/trails/data/{{page.gpx}}" class="btn btn-outline btn-sm-nav" target="_blank"><i class="fa fa-download"></i>&nbsp;GPX Data</a>
           </div>
         </div>
         <div class="col-lg-7 col-md-7">
