--- a/_includes/4-trails-overview.html
+++ b/_includes/4-trails-overview.html
@@ -22,7 +22,7 @@
         <div class="service-box">
           <img src="{{site.baseurl}}/assets/img/homepage-images/medium/bikepath.jpg" class="img-responsive" alt="Responsive image">
           <h3>Bikeways</h3>
-          <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+          <p class="text-muted">Southern Ohio has several paved and limestone bike paths.</p>
           <a class="btn btn-outline btn-xl btn-inverse" href="bikeways/">View the Trails</a>
         </div>
       </div>
@@ -30,9 +30,8 @@
         <div class="service-box">
           <img src="{{site.baseurl}}/assets/img/homepage-images/medium/hiking.jpg" class="img-responsive" alt="Responsive image">
           <h3>Hiking & Bridle Trails</h3>
-          <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+          <p class="text-muted">With over one hundred miles of hiking and backpacking trails, including the Buckeye Trail and the Shawnee Backpacking Trail, Southern Ohio has your fix when it comes to outdoor adventure.</p>
           <a class="btn btn-outline btn-xl btn-inverse" href="hiking-bridle/">View the Trails</a>
-
         </div>
       </div>
       <div class="col-lg-4 col-md-4 text-center">
@@ -40,7 +39,7 @@
           <img src="{{site.baseurl}}/assets/img/homepage-images/medium/mountainbiking.jpg" class="img-responsive" alt="Responsive image">
           <!--i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i-->
           <h3>Mountain Bike Trails</h3>
-          <p class="text-muted">We update dependencies to keep things fresh.</p>
+          <p class="text-muted">Mountain Biking is trending in Southern Ohio, and there are many great rides to choose from.</p>
           <a class="btn btn-outline btn-xl btn-inverse" href="mountain-biking/">View the Trails</a>
 
         </div>
