--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -56,6 +56,15 @@ $theme-dark: #222;
   "base"
 ;
 /*custom*/
+/*map*/
+.leaflet-popup-content-wrapper {
+  border-radius: 4px!important;
+}
+/*extra marker*/
+.extra-marker.extra-marker-svg img {
+  margin-top: -36px;
+}
+/*endmap*/
 #results-container {
   background: white;
   border-radius: 5px;
@@ -68,6 +77,9 @@ $theme-dark: #222;
 }
 #results-container.active {
   border: solid thin lightgray;
+}
+ul.active {
+  padding: 0;
 }
 #results-container li {
   list-style: none;
@@ -193,7 +205,7 @@ footer {
   .sidebar-offcanvas {
     position: absolute;
     top: 0;
-    width: 70%; /* 6 columns */
+    width: 50%; /* 6 columns */
   }
 }
 @media screen and (max-width:768px) {
