--- a/_includes/10-trails-detailed-map.html
+++ b/_includes/10-trails-detailed-map.html
@@ -46,21 +46,14 @@ var redMarker = L.ExtraMarkers.icon({
   svg: true
 });
 
-L.marker([39, -83], {icon: redMarker,}).addTo(map);
+L.marker([39, -83], {icon: redMarker,});
 
-
-var pois = new L.geoJson(null, {
-  pointToLayer: function(feature, latlng) {
-    return new L.marker(latlng, {icon:Parking})
+var parkingLayer = new L.geoJson(null, {
+  filter: function(feature) {
+    if (feature.properties.Title == 'Parking') {
+      return true
+    }
   },
-  onEachFeature: function(feature, layer) {
-    var latlng = layer.feature._latlng.lat + ',' + layer.feature._latlng.lng;
-    layer.bindPopup('<h4>Parking</h4><a href="https://www.google.com/maps/dir/' + latlng + '/" target="_blank">Directions</a>');
-  }
-}).addTo(map);
-
-{% if page.csv %}
-var poiscsv = new L.geoJson(null, {
   pointToLayer: function(feature, latlng) {
     var type = feature.properties["marker-symbol"];
     console.log(type);
@@ -80,26 +73,77 @@ var poiscsv = new L.geoJson(null, {
   }
 }).addTo(map);
 
-var poidata = omnivore.csv("{{site.baseurl}}/trails/data/{{page.csv}}", null, poiscsv);
+{% if page.csv %}
+var pois = new L.geoJson(null, {
+  filter: function(feature) {
+    if (feature.properties.Title != 'Parking') {
+      return true
+    }
+  },
+  pointToLayer: function(feature, latlng) {
+    var type = feature.properties["marker-symbol"];
+    console.log(type);
+    var icon = new L.ExtraMarkers.icon({
+      icon: type,
+      markerColor: '#333',
+      svgBorderColor: '#333',
+      shape: 'circle',
+      prefix: 'maki',
+      svg: true
+    });
+    return new L.marker(latlng, {icon:icon});
+  },
+  onEachFeature: function(feature, layer) {
+    var latlng = layer._latlng.lat + ',' + layer._latlng.lng;
+    layer.bindPopup('<h4>'+ layer.feature.properties.Title + '</h4><a href="https://www.google.com/maps/dir/?saddr=My+Location&daddr=' + latlng + '/" target="_blank">Directions</a>');
+  }
+});
+
+var poidata = omnivore.csv("{{site.baseurl}}/trails/data/{{page.csv}}");
 poidata.on('ready', function() {
-  console.log('csv data ready')
+  console.log('csv data ready');
+  pois.addData(poidata.toGeoJSON());
+  console.log(poidata);
+  parkingLayer.addData(poidata.toGeoJSON());
 });
 {% endif %}
-
+{% if page.pois %}
+var pois = new L.geoJson(null, {
+  pointToLayer: function(feature, latlng) {
+    return new L.marker(latlng, {icon:Parking})
+  },
+  onEachFeature: function(feature, layer) {
+    var latlng = layer.feature._latlng.lat + ',' + layer.feature._latlng.lng;
+    layer.bindPopup('<h4>Parking</h4><a href="https://www.google.com/maps/dir/' + latlng + '" target="_blank">Directions</a>');
+  }
+});
 {%for poi in page.pois %}
 {% if poi.name %}
 /*var parking = L.icon.mapkey({icon:"parking",color:'white',background:"black",size:24, boxShadow:false});*/
-var {{poi.name}} = L.marker({{poi.latlng}});
+var parkingIcon = new L.ExtraMarkers.icon({
+  icon: '{{poi.marker-symbol}}',
+  markerColor: '#333',
+  svgBorderColor: '#333',
+  shape: 'circle',
+  prefix: 'maki',
+  svg: true
+});
+var {{poi.name}} = L.marker({{poi.latlng}}, {icon:parkingIcon});
 latlng = {{poi.latlng | stringify}};
 {{poi.name}}.bindPopup('<h4>Parking</h4><h5><a href="https://www.google.com/maps/dir/?saddr=My+Location&daddr=' + latlng + '" target="_blank">Directions</a></h5>');
+{% if poi.Title == 'Parking' %}
+parkingLayer.addLayer({{poi.name}});
+{% else %}
 pois.addLayer({{poi.name}});
 {% endif %}
+{% endif %}
 {% endfor%}
+{% endif %}
 
 var trails = L.geoJson(null, {
   style: {
     color: '#1b7837',
-    weight: 5,
+    weight: 7,
     opacity: 1
   },
   filter: function(feature) {
@@ -108,7 +152,7 @@ var trails = L.geoJson(null, {
     }
   },
   onEachFeature: function (feature, trail) {
-    trail.bindPopup(feature.properties.Name)
+    trail.bindPopup('<h4>'+ feature.properties.Name+'</h4>');
   }
 }).addTo(map);
 
@@ -118,7 +162,7 @@ $.getJSON("{{site.baseurl}}/trails/data/{{layer.file}}", function(data) {
   trails.addData(data)
 });
 {% endfor %}
-/*map.on('zoomend', function() {
+map.on('zoomend', function() {
   if (map.getZoom() > 16) {
     map.removeLayer(hillshade);
     esri.addTo(map);
@@ -131,5 +175,45 @@ $.getJSON("{{site.baseurl}}/trails/data/{{layer.file}}", function(data) {
       hillshade.addTo(map);
     }
   }
-});*/
+});
+map.on('click', function() {
+  map.scrollWheelZoom.enable();
+});
+map.on('moveend', function() {
+  map.scrollWheelZoom.enable();
+});
+map.on('zoomend', function() {
+  map.scrollWheelZoom.enable();
+});
+map.on('mouseout', function() {
+  map.scrollWheelZoom.disable();
+});
+{% if page.csv or page.pois %}
+var poiLayerButton = L.easyButton({
+    states: [{
+        stateName: 'add',
+        icon:      'fa-map-marker fa-2x',
+        title:     'Remove Points of Interest',
+        onClick: function(btn, map) {
+          if (!map.hasLayer(pois)) {
+            map.addLayer(pois)
+          }
+            btn.state('remove');
+        }
+      },{
+            stateName: 'remove',
+            icon:      'fa-times fa-2x',
+            title:     'Add Points of Interest',
+            onClick: function(btn, map) {
+              if (map.hasLayer(pois)) {
+                map.removeLayer(pois)
+              }
+                btn.state('add');    // change state on click!
+            }
+          }
+        ]
+});
+
+poiLayerButton.addTo(map);
+{% endif %}
 </script>
