--- a/_includes/8-scripts.html
+++ b/_includes/8-scripts.html
@@ -22,6 +22,8 @@
 <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.3.1/leaflet-omnivore.min.js'></script>
 <link rel="stylesheet" href="{{site.baseurl}}/assets/vendor/extra-markers/css/leaflet.extra-markers.min.css">
 <script src="{{site.baseurl}}/assets/vendor/extra-markers/src/assets/js/leaflet.extra-markers.js"></script>
+<link rel="stylesheet" href="{{site.baseurl}}/assets/vendor/leaflet-easybutton/easy-button.css">
+<script src="{{site.baseurl}}/assets/vendor/leaflet-easybutton/easy-button.js"></script>
 <script>
   SimpleJekyllSearch({
     searchInput: document.getElementById('search-input'),
